parser/antlr/tsgen_parser.go
// Code generated from antlr/TSgen.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // TSgen

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type TSgenParser struct {
	*antlr.BaseParser
}

var TSgenParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func tsgenParserInit() {
	staticData := &TSgenParserStaticData
	staticData.LiteralNames = []string{
		"", "'state'", "'final'", "'->'", "':'", "'('", "')'", "','", "'pkg'",
		"'import'", "'protocol'", "'file'", "'raw'", "'name'", "'returns'",
		"'.'", "'s0'", "'fstate'", "'['", "']'", "'*'", "'...'", "'when'", "'true'",
		"'false'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "LBRACK", "RBRACK", "STAR", "ELLIPSIS", "WHEN", "TRUE", "FALSE",
		"COMMENT", "FILENAME", "ID", "STRING", "WS",
	}
	staticData.RuleNames = []string{
		"program", "statement", "stateDecl", "transitionDecl", "tArgs", "tParam",
		"docComment", "pkgDecl", "importDecl", "protocolDecl", "fileDecl", "rawDecl",
		"rawInputs", "rawParam", "rawOutputs", "typeExpr", "qualID", "s0Decl",
		"fDecl",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// TSgenParserInit initializes any static state used to implement TSgenParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewTSgenParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func TSgenParserInit() {
	staticData := &TSgenParserStaticData
	staticData.once.Do(tsgenParserInit)
}

// NewTSgenParser produces a new parser instance for the optional input antlr.TokenStream.
func NewTSgenParser(input antlr.TokenStream) *TSgenParser {
	TSgenParserInit()
	this := new(TSgenParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &TSgenParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "TSgen.g4"

	return this
}

// TSgenParser tokens.
const (
	TSgenParserEOF      = antlr.TokenEOF
	TSgenParserT__0     = 1
	TSgenParserT__1     = 2
	TSgenParserT__2     = 3
	TSgenParserT__3     = 4
	TSgenParserT__4     = 5
	TSgenParserT__5     = 6
	TSgenParserT__6     = 7
	TSgenParserT__7     = 8
	TSgenParserT__8     = 9
	TSgenParserT__9     = 10
	TSgenParserT__10    = 11
	TSgenParserT__11    = 12
	TSgenParserT__12    = 13
	TSgenParserT__13    = 14
	TSgenParserT__14    = 15
	TSgenParserT__15    = 16
	TSgenParserT__16    = 17
	TSgenParserLBRACK   = 18
	TSgenParserRBRACK   = 19
	TSgenParserSTAR     = 20
	TSgenParserELLIPSIS = 21
	TSgenParserWHEN     = 22
	TSgenParserTRUE     = 23
	TSgenParserFALSE    = 24
	TSgenParserCOMMENT  = 25
	TSgenParserFILENAME = 26
	TSgenParserID       = 27
	TSgenParserSTRING   = 28
	TSgenParserWS       = 29
)

// TSgenParser rules.
const (
	TSgenParserRULE_program        = 0
	TSgenParserRULE_statement      = 1
	TSgenParserRULE_stateDecl      = 2
	TSgenParserRULE_transitionDecl = 3
	TSgenParserRULE_tArgs          = 4
	TSgenParserRULE_tParam         = 5
	TSgenParserRULE_docComment     = 6
	TSgenParserRULE_pkgDecl        = 7
	TSgenParserRULE_importDecl     = 8
	TSgenParserRULE_protocolDecl   = 9
	TSgenParserRULE_fileDecl       = 10
	TSgenParserRULE_rawDecl        = 11
	TSgenParserRULE_rawInputs      = 12
	TSgenParserRULE_rawParam       = 13
	TSgenParserRULE_rawOutputs     = 14
	TSgenParserRULE_typeExpr       = 15
	TSgenParserRULE_qualID         = 16
	TSgenParserRULE_s0Decl         = 17
	TSgenParserRULE_fDecl          = 18
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllStatement() []IStatementContext
	Statement(i int) IStatementContext

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TSgenParserRULE_program
	return p
}

func InitEmptyProgramContext(p *ProgramContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TSgenParserRULE_program
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = TSgenParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(TSgenParserEOF, 0)
}

func (s *ProgramContext) AllStatement() []IStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStatementContext); ok {
			len++
		}
	}

	tst := make([]IStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStatementContext); ok {
			tst[i] = t.(IStatementContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Statement(i int) IStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case TSgenVisitor:
		return t.VisitProgram(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *TSgenParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, TSgenParserRULE_program)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(41)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&167976706) != 0 {
		{
			p.SetState(38)
			p.Statement()
		}

		p.SetState(43)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(44)
		p.Match(TSgenParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	StateDecl() IStateDeclContext
	TransitionDecl() ITransitionDeclContext
	DocComment() IDocCommentContext
	PkgDecl() IPkgDeclContext
	ImportDecl() IImportDeclContext
	ProtocolDecl() IProtocolDeclContext
	FileDecl() IFileDeclContext
	RawDecl() IRawDeclContext
	S0Decl() IS0DeclContext
	FDecl() IFDeclContext

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TSgenParserRULE_statement
	return p
}

func InitEmptyStatementContext(p *StatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TSgenParserRULE_statement
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = TSgenParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) StateDecl() IStateDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStateDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStateDeclContext)
}

func (s *StatementContext) TransitionDecl() ITransitionDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITransitionDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITransitionDeclContext)
}

func (s *StatementContext) DocComment() IDocCommentContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDocCommentContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDocCommentContext)
}

func (s *StatementContext) PkgDecl() IPkgDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPkgDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPkgDeclContext)
}

func (s *StatementContext) ImportDecl() IImportDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IImportDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IImportDeclContext)
}

func (s *StatementContext) ProtocolDecl() IProtocolDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IProtocolDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IProtocolDeclContext)
}

func (s *StatementContext) FileDecl() IFileDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFileDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFileDeclContext)
}

func (s *StatementContext) RawDecl() IRawDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRawDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRawDeclContext)
}

func (s *StatementContext) S0Decl() IS0DeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IS0DeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IS0DeclContext)
}

func (s *StatementContext) FDecl() IFDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFDeclContext)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case TSgenVisitor:
		return t.VisitStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *TSgenParser) Statement() (localctx IStatementContext) {
	localctx = NewStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, TSgenParserRULE_statement)
	p.SetState(56)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case TSgenParserT__0:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(46)
			p.StateDecl()
		}

	case TSgenParserID:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(47)
			p.TransitionDecl()
		}

	case TSgenParserCOMMENT:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(48)
			p.DocComment()
		}

	case TSgenParserT__7:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(49)
			p.PkgDecl()
		}

	case TSgenParserT__8:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(50)
			p.ImportDecl()
		}

	case TSgenParserT__9:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(51)
			p.ProtocolDecl()
		}

	case TSgenParserT__10:
		p.EnterOuterAlt(localctx, 7)
		{
			p.SetState(52)
			p.FileDecl()
		}

	case TSgenParserT__11:
		p.EnterOuterAlt(localctx, 8)
		{
			p.SetState(53)
			p.RawDecl()
		}

	case TSgenParserT__15:
		p.EnterOuterAlt(localctx, 9)
		{
			p.SetState(54)
			p.S0Decl()
		}

	case TSgenParserT__16:
		p.EnterOuterAlt(localctx, 10)
		{
			p.SetState(55)
			p.FDecl()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IStateDeclContext is an interface to support dynamic dispatch.
type IStateDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetFrom returns the from token.
	GetFrom() antlr.Token

	// SetFrom sets the from token.
	SetFrom(antlr.Token)

	// Getter signatures
	ID() antlr.TerminalNode

	// IsStateDeclContext differentiates from other interfaces.
	IsStateDeclContext()
}

type StateDeclContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
	from   antlr.Token
}

func NewEmptyStateDeclContext() *StateDeclContext {
	var p = new(StateDeclContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TSgenParserRULE_stateDecl
	return p
}

func InitEmptyStateDeclContext(p *StateDeclContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TSgenParserRULE_stateDecl
}

func (*StateDeclContext) IsStateDeclContext() {}

func NewStateDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StateDeclContext {
	var p = new(StateDeclContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = TSgenParserRULE_stateDecl

	return p
}

func (s *StateDeclContext) GetParser() antlr.Parser { return s.parser }

func (s *StateDeclContext) GetFrom() antlr.Token { return s.from }

func (s *StateDeclContext) SetFrom(v antlr.Token) { s.from = v }

func (s *StateDeclContext) ID() antlr.TerminalNode {
	return s.GetToken(TSgenParserID, 0)
}

func (s *StateDeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StateDeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StateDeclContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case TSgenVisitor:
		return t.VisitStateDecl(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *TSgenParser) StateDecl() (localctx IStateDeclContext) {
	localctx = NewStateDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, TSgenParserRULE_stateDecl)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(58)
		p.Match(TSgenParserT__0)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(59)

		var _m = p.Match(TSgenParserID)

		localctx.(*StateDeclContext).from = _m
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(61)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == TSgenParserT__1 {
		{
			p.SetState(60)
			p.Match(TSgenParserT__1)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITransitionDeclContext is an interface to support dynamic dispatch.
type ITransitionDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetFrom returns the from token.
	GetFrom() antlr.Token

	// GetLabel returns the label token.
	GetLabel() antlr.Token

	// GetMethod returns the method token.
	GetMethod() antlr.Token

	// GetTo returns the to token.
	GetTo() antlr.Token

	// GetOutcome returns the outcome token.
	GetOutcome() antlr.Token

	// SetFrom sets the from token.
	SetFrom(antlr.Token)

	// SetLabel sets the label token.
	SetLabel(antlr.Token)

	// SetMethod sets the method token.
	SetMethod(antlr.Token)

	// SetTo sets the to token.
	SetTo(antlr.Token)

	// SetOutcome sets the outcome token.
	SetOutcome(antlr.Token)

	// Getter signatures
	AllID() []antlr.TerminalNode
	ID(i int) antlr.TerminalNode
	TArgs() ITArgsContext
	WHEN() antlr.TerminalNode
	TRUE() antlr.TerminalNode
	FALSE() antlr.TerminalNode

	// IsTransitionDeclContext differentiates from other interfaces.
	IsTransitionDeclContext()
}

type TransitionDeclContext struct {
	antlr.BaseParserRuleContext
	parser  antlr.Parser
	from    antlr.Token
	label   antlr.Token
	method  antlr.Token
	to      antlr.Token
	outcome antlr.Token
}

func NewEmptyTransitionDeclContext() *TransitionDeclContext {
	var p = new(TransitionDeclContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TSgenParserRULE_transitionDecl
	return p
}

func InitEmptyTransitionDeclContext(p *TransitionDeclContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TSgenParserRULE_transitionDecl
}

func (*TransitionDeclContext) IsTransitionDeclContext() {}

func NewTransitionDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TransitionDeclContext {
	var p = new(TransitionDeclContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = TSgenParserRULE_transitionDecl

	return p
}

func (s *TransitionDeclContext) GetParser() antlr.Parser { return s.parser }

func (s *TransitionDeclContext) GetFrom() antlr.Token { return s.from }

func (s *TransitionDeclContext) GetLabel() antlr.Token { return s.label }

func (s *TransitionDeclContext) GetMethod() antlr.Token { return s.method }

func (s *TransitionDeclContext) GetTo() antlr.Token { return s.to }

func (s *TransitionDeclContext) GetOutcome() antlr.Token { return s.outcome }

func (s *TransitionDeclContext) SetFrom(v antlr.Token) { s.from = v }

func (s *TransitionDeclContext) SetLabel(v antlr.Token) { s.label = v }

func (s *TransitionDeclContext) SetMethod(v antlr.Token) { s.method = v }

func (s *TransitionDeclContext) SetTo(v antlr.Token) { s.to = v }

func (s *TransitionDeclContext) SetOutcome(v antlr.Token) { s.outcome = v }

func (s *TransitionDeclContext) AllID() []antlr.TerminalNode {
	return s.GetTokens(TSgenParserID)
}

func (s *TransitionDeclContext) ID(i int) antlr.TerminalNode {
	return s.GetToken(TSgenParserID, i)
}

func (s *TransitionDeclContext) TArgs() ITArgsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITArgsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITArgsContext)
}

func (s *TransitionDeclContext) WHEN() antlr.TerminalNode {
	return s.GetToken(TSgenParserWHEN, 0)
}

func (s *TransitionDeclContext) TRUE() antlr.TerminalNode {
	return s.GetToken(TSgenParserTRUE, 0)
}

func (s *TransitionDeclContext) FALSE() antlr.TerminalNode {
	return s.GetToken(TSgenParserFALSE, 0)
}

func (s *TransitionDeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TransitionDeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TransitionDeclContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case TSgenVisitor:
		return t.VisitTransitionDecl(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *TSgenParser) TransitionDecl() (localctx ITransitionDeclContext) {
	localctx = NewTransitionDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, TSgenParserRULE_transitionDecl)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(63)

		var _m = p.Match(TSgenParserID)

		localctx.(*TransitionDeclContext).from = _m
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(64)
		p.Match(TSgenParserT__2)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(65)

		var _m = p.Match(TSgenParserID)

		localctx.(*TransitionDeclContext).label = _m
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(66)
		p.Match(TSgenParserT__3)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(67)

		var _m = p.Match(TSgenParserID)

		localctx.(*TransitionDeclContext).method = _m
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(68)
		p.Match(TSgenParserT__4)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(70)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&137625600) != 0 {
		{
			p.SetState(69)
			p.TArgs()
		}

	}
	{
		p.SetState(72)
		p.Match(TSgenParserT__5)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(73)
		p.Match(TSgenParserT__2)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(74)

		var _m = p.Match(TSgenParserID)

		localctx.(*TransitionDeclContext).to = _m
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(77)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == TSgenParserWHEN {
		{
			p.SetState(75)
			p.Match(TSgenParserWHEN)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(76)

			var _lt = p.GetTokenStream().LT(1)

			localctx.(*TransitionDeclContext).outcome = _lt

			_la = p.GetTokenStream().LA(1)

			if !(_la == TSgenParserTRUE || _la == TSgenParserFALSE) {
				var _ri = p.GetErrorHandler().RecoverInline(p)

				localctx.(*TransitionDeclContext).outcome = _ri
			} else {
				p.GetErrorHandler().ReportMatch(p)
				p.Consume()
			}
		}

	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITArgsContext is an interface to support dynamic dispatch.
type ITArgsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllTParam() []ITParamContext
	TParam(i int) ITParamContext

	// IsTArgsContext differentiates from other interfaces.
	IsTArgsContext()
}

type TArgsContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTArgsContext() *TArgsContext {
	var p = new(TArgsContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TSgenParserRULE_tArgs
	return p
}

func InitEmptyTArgsContext(p *TArgsContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TSgenParserRULE_tArgs
}

func (*TArgsContext) IsTArgsContext() {}

func NewTArgsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TArgsContext {
	var p = new(TArgsContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = TSgenParserRULE_tArgs

	return p
}

func (s *TArgsContext) GetParser() antlr.Parser { return s.parser }

func (s *TArgsContext) AllTParam() []ITParamContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ITParamContext); ok {
			len++
		}
	}

	tst := make([]ITParamContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ITParamContext); ok {
			tst[i] = t.(ITParamContext)
			i++
		}
	}

	return tst
}

func (s *TArgsContext) TParam(i int) ITParamContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITParamContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITParamContext)
}

func (s *TArgsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TArgsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TArgsContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case TSgenVisitor:
		return t.VisitTArgs(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *TSgenParser) TArgs() (localctx ITArgsContext) {
	localctx = NewTArgsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, TSgenParserRULE_tArgs)
	var _la int
